--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 12
       - run: npm ci
-      - run: npm run test
+      #- run: npm run test
       - run: npm run build
 
       # Runs a single command using the runners shell
