--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 16
       - run: npm ci
-      #- run: npm run test
+      - run: npm run test
       - run: npm run build
       - run: npm run lint
       - run: npm run check-types
