--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,26 +17,27 @@ jobs:
       - uses: actions/setup-node@v3.5.0
         with:
           node-version: 16
+          cache: 'npm'
+          cache-dependency-path: subdir/package-lock.json
+          
+      - name: Get npm cache directory
+        id: npm-cache-dir
+        run: |
+          echo "::set-output name=dir::$(npm config get cache)"
+      - uses: actions/cache@v3
+        id: npm-cache # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
+        with:
+          path: ${{ steps.npm-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+            
       - run: npm ci
       - run: npm run test
       - run: npm run build
       - run: npm run lint
       - run: npm run check-types
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          
-  send-message:
-    runs-on: ubuntu-latest
-    
-    steps:
+      
       - name: send default message
         uses: appleboy/telegram-action@master
         with:
