--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           node-version: 16
           cache: 'npm'
-          cache-dependency-path: subdir/package-lock.json
+          cache-dependency-path: '**/package-lock.json'
           
       - name: Get npm cache directory
         id: npm-cache-dir
