--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -4,33 +4,27 @@ on:
   pull_request:
     branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
 
     steps:
       - uses: actions/checkout@v3 
+
+          
+      - name: Use Node.js ${{ matrix.node-version }}
       - uses: actions/setup-node@v3.5.0
         with:
-          node-version: 16
-          cache: 'npm'
-          cache-dependency-path: '**/package-lock.json'
-          
-      - name: Get npm cache directory
-        id: npm-cache-dir
-        run: |
-          echo "::set-output name=dir::$(npm config get cache)"
-      - uses: actions/cache@v3
-        id: npm-cache # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
+          node-version: ${{ matrix.node-version }}
+      - name : Cache
+        uses: actions/cache@v3.0.10
         with:
-          path: ${{ steps.npm-cache-dir.outputs.dir }}
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+          path: "/node_modules"
+          key: node-modules-${{ hashFiles('package.json') }}
             
       - run: npm ci
       - run: npm run test
