--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -32,6 +32,7 @@ jobs:
             
       - run: npm ci
       - run: npm run build
+      - run: npm run test
       - run: npm run lint
       - run: npm run check-types
       
