--- a/.github/workflows/push_to_master.yml
+++ b/.github/workflows/push_to_master.yml
@@ -26,8 +26,8 @@ jobs:
       - name : Cache
         uses: actions/cache@v3.0.10
         with:
-          path: "/node_modules"
-          key: node-modules-${{ hashFiles('package.json') }}
+          path: "./*"
+          key: ${{ github.sha }}
             
       - run: npm ci
       - run: npm run build
@@ -64,12 +64,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3 
-
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3.5.0
         with:
           node-version: ${{ matrix.node-version }}
+        
+      - uses: actions/cache@v2
+        id: restore-build
+        with:
+          path: ./*
+          key: ${{ github.sha }}
           
+      - run: npm ci
       - run: npm run lint
       - run: npm run check-types
       
