--- a/.github/workflows/push_to_master.yml
+++ b/.github/workflows/push_to_master.yml
@@ -15,6 +15,9 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
+    
+    outputs:
+      message: ${{ steps.set_message.outputs.build_message }}
 
     steps:
       - uses: actions/checkout@v3 
@@ -32,19 +35,18 @@ jobs:
       - run: npm ci
       - run: npm run build
      
-      - name: send message
-        if: success()
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: |         
+      - if: success()
+        id: set_message
+        run: | 
+          echo "::set-output name=build_message::\"
             Branch: *${{ github.ref }}*
             Repository: *${{ github.repository }}*
             Owner: *${{ github.repository_owner }}*
-            --✅ BUILD completed successfully
-
-      - if: failure()
+            --✅ BUILD completed successfully\""  
+        
+      
+      - name: send error message
+        if: failure()
         uses: appleboy/telegram-action@master
         with:
           to: ${{ secrets.TELEGRAM_TO }}
@@ -123,3 +125,45 @@ jobs:
           
       - run: echo Hello world! Here will be placed my tests
       - run: npm run test
+      
+      - if: success()
+        name: send success message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |         
+            Branch: *${{ github.ref }}*
+            Repository: *${{ github.repository }}*
+            Owner: *${{ github.repository_owner }}*
+            --✅ LINTING completed successfully
+
+      - if: failure()
+        name: send error message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |         
+            Branch: *${{ github.ref }}*
+            Repository: *${{ github.repository }}*
+            Owner: *${{ github.repository_owner }}*
+            --❌ LINTING completed with errors
+            
+  send-mesage: 
+    runs-on: ubuntu-latest
+    needs: [build, lint, test]
+  
+    steps:
+      - uses: actions/checkout@v3
+      - run: echo ${{needs.build.outputs.message}}
+      - name: send message
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_TO }}
+          token: ${{ secrets.TELEGRAM_TOKEN }}
+          message: |         
+            Branch: *${{ github.ref }}*
+            Repository: *${{ github.repository }}*
+            Owner: *${{ github.repository_owner }}*
+            --❌ LINTING completed with errors
