--- a/.github/workflows/push_to_master.yml
+++ b/.github/workflows/push_to_master.yml
@@ -38,11 +38,7 @@ jobs:
       - if: success()
         id: set_message
         run: | 
-          echo "::set-output name=build_message::
-            Branch: *${{ github.ref }}*
-            Repository: *${{ github.repository }}*
-            Owner: *${{ github.repository_owner }}*
-            --✅ BUILD completed successfully"  
+          echo "::set-output name=build_message::--✅ BUILD completed successfully"  
         
       
       - name: send error message
