--- a/.github/workflows/push_to_master.yml
+++ b/.github/workflows/push_to_master.yml
@@ -17,7 +17,7 @@ jobs:
         node-version: [16.x]
     
     outputs:
-      message: ${{ steps.set_message.outputs.build_message }}
+      message: ${{ steps.*.outputs.build_message }}
 
     steps:
       - uses: actions/checkout@v3 
@@ -36,22 +36,17 @@ jobs:
       - run: npm run build
      
       - if: success()
-        id: set_message
+        id: set_success_message
         run: | 
           echo "::set-output name=build_message::--✅ BUILD completed successfully"  
         
       
       - name: send error message
         if: failure()
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_TO }}
-          token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: |         
-            Branch: *${{ github.ref }}*
-            Repository: *${{ github.repository }}*
-            Owner: *${{ github.repository_owner }}*
-            --❌ BUILD completed with errors
+        id: set_error_message
+        run: | 
+          echo "::set-output name=build_message::--❌ BUILD completed with errors"  
+           
   lint:
     runs-on: ubuntu-latest
     needs: [build]
