--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.6.1",
     "next": "12.3.1",
+    "next-auth": "^4.16.4",
     "next-seo": "^5.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -58,6 +61,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
+    "prisma": "^4.6.1",
     "typescript": "4.8.4"
   }
 }
