--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@apollo/server": "^4.1.1",
+    "@as-integrations/next": "^1.1.0",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.6.1",
+    "graphql": "^16.6.0",
+    "graphql-scalars": "^1.20.1",
     "next": "12.3.1",
     "next-auth": "^4.16.4",
     "next-seo": "^5.5.0",
+    "nexus": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
