--- a/package.json
+++ b/package.json
@@ -20,15 +20,22 @@
     "@apollo/server": "^4.1.1",
     "@as-integrations/next": "^1.1.0",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.6.1",
+    "@next/font": "^13.0.6",
+    "@prisma/client": "^4.7.1",
+    "clsx": "^1.2.1",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
-    "next": "12.3.1",
+    "next": "^13.0.6",
     "next-auth": "^4.16.4",
     "next-seo": "^5.5.0",
     "nexus": "^1.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "nexus-shield": "^2.2.1",
+    "nexus-validate": "^1.4.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "uninstall": "^0.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.3.1",
@@ -38,13 +45,13 @@
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.12",
+    "autoprefixer": "^10.4.13",
     "cypress": "^10.9.0",
     "eslint": "8.22.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.0.6",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "^2.26.0",
@@ -64,9 +71,11 @@
     "jest-environment-jsdom": "^29.1.2",
     "lint-staged": "^13.0.3",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.3",
-    "prisma": "^4.6.1",
+    "prisma": "^4.7.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.8.4"
   }
 }
