feat: 🎸 finish tags and add apollo client with ts
add new eslint rules, add tags, add apollo client and typegen for ts,
fix query

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,6 +41,7 @@
         "project": "./tsconfig.json"
       },
       "rules": {
+        "no-nested-ternary": "off",
         "no-return-await": "off",
         "jsx-a11y/anchor-is-valid": "off", // Next.js uses its own internal link system
         "react/require-default-props": "off", // Allow non-defined react props as undefined
@@ -76,6 +77,45 @@
       "extends": ["plugin:cypress/recommended"],
       "parserOptions": {
         "project": "./cypress/tsconfig.json"
+      }
+    },
+    // Configuration for graphql
+    {
+      "files": ["*.graphql"],
+      "parser": "@graphql-eslint/eslint-plugin",
+      "plugins": ["@graphql-eslint"],
+      "rules": {
+        "@graphql-eslint/avoid-duplicate-fields": "error",
+        "@graphql-eslint/executable-definitions": "error",
+        "@graphql-eslint/fields-on-correct-type": "error",
+        "@graphql-eslint/fragments-on-composite-type": "error",
+        "@graphql-eslint/known-argument-names": "error",
+        "@graphql-eslint/known-directives": "error",
+        "@graphql-eslint/known-type-names": "error",
+        "@graphql-eslint/no-anonymous-operations": "error",
+        "@graphql-eslint/no-deprecated": "warn",
+        "@graphql-eslint/no-unused-variables": "warn",
+        "@graphql-eslint/provided-required-arguments": "error",
+        "@graphql-eslint/scalar-leafs": "error",
+        "@graphql-eslint/unique-argument-names": "error",
+        "@graphql-eslint/unique-input-field-names": "error",
+        "@graphql-eslint/unique-variable-names": "error",
+        "@graphql-eslint/value-literals-of-correct-type": "error",
+        "@graphql-eslint/variables-are-input-types": "error",
+        "@graphql-eslint/variables-in-allowed-position": "error",
+        "@graphql-eslint/match-document-filename": [
+          "error",
+          {
+            "fileExtension": ".graphql",
+            "query": "PascalCase",
+            "mutation": "PascalCase",
+            "subscription": "PascalCase",
+            "fragment": {
+              "style": "PascalCase",
+              "suffix": ".fragment"
+            }
+          }
+        ]
       }
     }
   ]
